--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,16 @@ jobs:
       working-directory: usman-app
     - run: npm test
       working-directory: usman-app
+    - name: Deploy
+      working-directory: usman-app
+      run: |
+        git config --global user.name $user_name
+        git config --global user.email $user_email 
+        git remote set-url origin https://${github_token}@github.com/${repository}
+        npm run deploy
+      env:
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+        github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN1 }}
+        repository: ${{ github.repository }} 
 
